update some example

--- a/demo_temperture/CMakeLists.txt
+++ b/demo_temperture/CMakeLists.txt
@@ -1,11 +1,10 @@
 # Set minimum required version of CMake
 cmake_minimum_required(VERSION 3.12)
 
-# Include build functions from Pico SDK
-include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
+include(pico_sdk_import.cmake)
 
 # Set name of project (as PROJECT_NAME) and C/C   standards
-project(blink C CXX ASM)
+project(temperature C CXX ASM)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 
@@ -14,13 +13,13 @@ pico_sdk_init()
 
 # Tell CMake where to find the executable source file
 add_executable(${PROJECT_NAME} 
-    main.cpp PID.cpp
+    main.cpp
 )
 
 # Link to pico_stdlib (gpio, time, etc. functions)
 target_link_libraries(${PROJECT_NAME} 
     pico_stdlib
-	hardware_adc
+    hardware_adc
 )
 
 # Enable usb output, disable uart output
