add some file code C relative to string

--- a/test_cpp/Makefile
+++ b/test_cpp/Makefile
@@ -1,15 +1,19 @@
-clean:
-	@rm -rf ouput
+#########################################
+#				My Makefile				#
+#########################################
+
+GCC = /mnt/d/MCU_Modeling/mcu/common/appl/gcc/gcc-6.2.0_mbd/bin/g++
 
 main:
-	@g++ -o ouput main.cpp
+	@$(GCC) -o ouput main.cpp
 	@./ouput
 	@rm -rf ouput
 
 struct_vector:
-	@g++ -o ouput struct_vector.cpp
-	@./ouput
-	@rm -rf ouput
+	@$(GCC) -o ouput struct_vector.cpp
 
 run:
 	@./ouput
+	
+clean:
+	@rm -rf ouput
