investigate direct kinematic and position of theta123

--- a/test_cpp/Makefile
+++ b/test_cpp/Makefile
@@ -2,7 +2,7 @@
 #				My Makefile				#
 #########################################
 
-GCC = /mnt/d/MCU_Modeling/mcu/common/appl/gcc/gcc-6.2.0_mbd/bin/g++
+GCC = g++
 
 main:
 	@$(GCC) -o ouput main.cpp
