update code to a new branch

--- a/test_cpp/Makefile
+++ b/test_cpp/Makefile
@@ -2,18 +2,41 @@
 #				My Makefile				#
 #########################################
 
-GCC = /mnt/d/MCU_Modeling/mcu/common/appl/gcc/gcc-6.2.0_mbd/bin/g++
+# GCC = /mnt/d/MCU_Modeling/mcu/common/appl/gcc/gcc-6.2.0_mbd/bin/g++
+
+GCC = g++
 
 main:
-	@$(GCC) -o ouput main.cpp
-	@./ouput
-	@rm -rf ouput
+	$(GCC) -o ouput main.cpp
+	./ouput
+	rm -rf ouput
 
 struct_vector:
-	@$(GCC) -o ouput struct_vector.cpp
+	$(GCC) -o ouput struct_vector.cpp -I ./
+	./ouput
+	rm -rf ouput
+
+serial: serial.o SerialStream.o SerialStreamBuf.o PosixSignalDispatcher.o SerialPort.o
+	$(GCC) serial.o SerialStream.o SerialStreamBuf.o PosixSignalDispatcher.o SerialPort.o -o ouput
+
+serial.o: serial.cpp
+	$(GCC) -c serial.cpp -I ./
+
+SerialStream.o:
+	$(GCC) -c SerialStream.cc -I ./
+
+SerialPort.o:
+	$(GCC) -c SerialPort.cpp -I ./
+
+SerialStreamBuf.o:
+	$(GCC) -c SerialStreamBuf.cc -I ./
+
+PosixSignalDispatcher.o:
+	$(GCC) -c PosixSignalDispatcher.cpp -I ./
 
 run:
-	@./ouput
+	./ouput
 	
 clean:
-	@rm -rf ouput
+	rm -rf ouput
+	rm -rf *.o
