--- a/test_cpp/Makefile
+++ b/test_cpp/Makefile
@@ -4,6 +4,23 @@
 
 GCC = g++
 
+workspace:
+	$(GCC) workspace.cpp -o ouput
+	./ouput
+	rm -rf ouput
+
+delta: func.o delta.o
+	@$(GCC) func.o delta.o -o ouput
+	@./ouput
+	@rm -rf *.o
+	@rm -rf ouput
+
+delta.o:
+	@$(GCC) -c delta.cpp -I./*
+
+func.o:
+	@$(GCC) -c func.cpp -I./*
+
 main:
 	@$(GCC) -o ouput main.cpp
 	@./ouput
@@ -14,8 +31,26 @@ struct_vector:
 	@./ouput
 	@rm -rf ouput
 
+num_print:
+	@$(GCC) -o ouput num_print.cpp
+	@./ouput
+	@rm -rf ouput
+
+test_json: test_json.o cJSON.o
+	@$(GCC) test_json.o cJSON.o -o ouput
+	@./ouput
+	@rm -rf *.o
+	@rm -rf ouput
+
+test_json.o:
+	@$(GCC) -c test_json.cpp -I./*
+
+cJSON.o:
+	@$(GCC) -c ./cJSON/cJSON.c -I./cJSON/*
+
 run:
 	@./ouput
 	
 clean:
+	@rm -rf *.o
 	@rm -rf ouput
