--- a/test_cpp/Makefile
+++ b/test_cpp/Makefile
@@ -4,13 +4,18 @@
 
 GCC = g++
 
+delta:
+	@$(GCC) -o ouput delta.cpp -I./*
+	@./ouput
+	@rm -rf ouput
+
 main:
 	@$(GCC) -o ouput main.cpp
 	@./ouput
 	@rm -rf ouput
 
 struct_vector:
-	@$(GCC) -o ouput struct_vector.cpp
+	@$(GCC) -o ouput struct_vector.c
 	@./ouput
 	@rm -rf ouput
 
