--- a/pico_rtos/CMakeLists.txt
+++ b/pico_rtos/CMakeLists.txt
@@ -12,20 +12,33 @@ set(CMAKE_CXX_STANDARD 17)
 # Creates a pico-sdk subdirectory in our project for the libraries
 pico_sdk_init()
 
+# Set any variables required for importing libraries
+SET(FREERTOS_KERNEL_PATH ${CMAKE_CURRENT_SOURCE_DIR}/FreeRTOS-Kernel)
+include(${FREERTOS_KERNEL_PATH}/portable/ThirdParty/GCC/RP2040/FreeRTOS_Kernel_import.cmake)
+
 # Tell CMake where to find the executable source file
 add_executable(${PROJECT_NAME} 
-    main.cpp PID.cpp
+    main.cpp
 )
 
-# Link to pico_stdlib (gpio, time, etc. functions)
+# Compile Definitions (Defines)
+target_compile_definitions(${PROJECT_NAME} PRIVATE
+    FREE_RTOS_KERNEL_SMP
+)
+
+target_include_directories(${PROJECT_NAME} PRIVATE
+    ${CMAKE_CURRENT_LIST_DIR}
+)
+
 target_link_libraries(${PROJECT_NAME} 
-    pico_stdlib
-	hardware_adc
+    pico_stdlib 
+    hardware_adc
+    FreeRTOS-Kernel-Heap4 
 )
 
 # Enable usb output, disable uart output
-pico_enable_stdio_usb(${PROJECT_NAME} 0)
-pico_enable_stdio_uart(${PROJECT_NAME} 1)
+pico_enable_stdio_usb(${PROJECT_NAME} 1)
+pico_enable_stdio_uart(${PROJECT_NAME} 0)
 
 # Create map/bin/hex/uf2 files
 pico_add_extra_outputs(${PROJECT_NAME})
