add setting files for .vscode editor

--- a/demo_fuzzy_PID/.vscode/settings.json
+++ b/demo_fuzzy_PID/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "cortex-debug.openocdPath": "/Users/thanhduong/Documents/Embeded_Project/RaspPico/openocd/src/openocd"
+    "cortex-debug.openocdPath": "/Users/thanhduong/Documents/Embeded_Project/RaspPico/openocd/src/openocd",
+    "files.associations": {
+        "ostream": "cpp"
+    }
 }
